Donation Layout horiz. scrollbar fix

--- a/Frontend/src/components/DonationLayout/DonationLayout.module.scss
+++ b/Frontend/src/components/DonationLayout/DonationLayout.module.scss
@@ -19,3 +19,7 @@
         font-size: var(--font-size-xl);
     }
 }
+
+.rightColumn {
+    padding-left: 40px;
+}
